Enhance ICP page: Add detailed ICP information and characteristics - Add detailed description of ICP - Include key characteristics such as company size, industry, and pain points - Add call-to-action to start defining ICP

--- a/components-man.json
+++ b/components-man.json
@@ -6,11 +6,12 @@
   "tailwind": {
     "config": "tailwind.config.ts",
     "css": "app/globals.css",
-    "baseColor": "gray",
-    "cssVariables": true
+    "baseColor": "slate",
+    "cssVariables": true,
+    "prefix": ""
   },
   "aliases": {
-    "utils": "@/lib/utils",
-    "components": "@/components"
+    "components": "@/components",
+    "utils": "@/lib/utils"
   }
 }
