--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -47,7 +48,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.0",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.436.0",
+    "lucide-react": "^0.438.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "react": "^18",
