--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
+    "openai": "^4.57.3",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
