--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.2",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tweet": "^3.2.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
