--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "openai": "^4.57.3",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
