--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
@@ -98,6 +99,7 @@
     "eslint-config-next": "14.2.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "node-fetch": "^2.7.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.1.1",
