--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "node --max_old_space_size=4096 ./node_modules/.bin/jest",
-    "test:watch": "node --max_old_space_size=4096 ./node_modules/.bin/jest --watch",
-    "test:coverage": "node --max_old_space_size=4096 ./node_modules/.bin/jest --coverage"
+    "test": "node --expose-gc --max-old-space-size=8192 ./node_modules/.bin/jest",
+    "test:watch": "node --expose-gc --max-old-space-size=8192 ./node_modules/.bin/jest --watch",
+    "test:coverage": "node --expose-gc --max-old-space-size=8192 ./node_modules/.bin/jest --coverage"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
@@ -91,7 +91,7 @@
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
-    "@types/node-fetch": "^2.6.12",
+    "@types/node-fetch": "2.6.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
@@ -99,11 +99,14 @@
     "eslint-config-next": "14.2.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "2.6.7",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "node-fetch": "2.6.7"
   }
 }
