--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test:coverage": "node --expose-gc --max-old-space-size=8192 ./node_modules/.bin/jest --coverage"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.32.1",
+    "ai": "latest",
+    "openai": "^4.0.0",
+    "zod": "^3.0.0",
+    "ai-sdk@provider-utils": "2.0.*",
+    "ai-sdk/*": "1.0.* ",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
@@ -65,8 +69,6 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
-    "openai": "^4.57.3",
-    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
@@ -81,7 +83,6 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
