--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "test:coverage": "node --expose-gc --max-old-space-size=8192 ./node_modules/.bin/jest --coverage"
   },
   "dependencies": {
-    "ai": "latest",
-    "openai": "^4.0.0",
-    "zod": "^3.0.0",
-    "ai-sdk@provider-utils": "2.0.*",
-    "ai-sdk/*": "1.0.* ",
+    "@ai-sdk/anthropic": "^1.0.2",
+    "@ai-sdk/openai": "^1.0.4",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
@@ -54,6 +51,7 @@
     "@tiptap/starter-kit": "^2.6.6",
     "@types/file-saver": "^2.0.7",
     "@uiw/react-md-editor": "^4.0.4",
+    "ai": "latest",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -69,6 +67,7 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
+    "openai": "^4.0.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
@@ -83,6 +82,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "zod": "^3.0.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
