--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.15",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
@@ -106,6 +111,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "2.6.7",
     "postcss": "^8.4.41",
+    "supabase": "^2.6.8",
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
