--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
     "@types/file-saver": "^2.0.7",
+    "@types/uuid": "^10.0.0",
     "@uiw/react-md-editor": "^4.0.4",
     "ai": "latest",
     "anthropic": "^0.0.0",
@@ -88,6 +89,7 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
