--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "cursor-tools": "latest"
   },
   "resolutions": {
     "node-fetch": "2.6.7"
