--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.0.5",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
@@ -105,6 +105,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "cursor-tools": "latest",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "jest": "^29.7.0",
@@ -115,8 +116,7 @@
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "cursor-tools": "latest"
+    "typescript": "^5"
   },
   "resolutions": {
     "node-fetch": "2.6.7"
