--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
     "version": 2,
     "framework": "nextjs",
-    "buildCommand": "next build",
-    "env": {
-        "NEXT_PUBLIC_SUPABASE_URL": "https://ggsgwtnniwwxsebdlouc.supabase.co",
-        "NEXT_PUBLIC_SITE_URL": "https://mozzy.vercel.app"
-    }
+    "buildCommand": "next build"
 }
