fix: update webpack config to suppress sidebar component warnings and add caniuse-lite dependency
- Enhanced webpack configuration to ignore warnings related to Sidebar components.
- Added caniuse-lite package to package.json for improved browser compatibility checks.
- Wrapped AuthForm in Suspense for better loading state management in the LoginPage component.
- Updated localStorage utility functions to ensure window availability before accessing localStorage.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@uiw/react-md-editor": "^4.0.4",
     "ai": "latest",
     "anthropic": "^0.0.0",
+    "caniuse-lite": "^1.0.30001715",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
