--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_NO_WARNINGS=1 next build",
     "start": "next start",
     "lint": "next lint",
     "test": "node --expose-gc --max-old-space-size=8192 ./node_modules/.bin/jest",
@@ -12,112 +12,112 @@
     "test:coverage": "node --expose-gc --max-old-space-size=8192 ./node_modules/.bin/jest --coverage"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.0.2",
-    "@ai-sdk/openai": "^1.0.4",
+    "@ai-sdk/anthropic": "^1.2.10",
+    "@ai-sdk/openai": "^1.3.18",
     "@anthropic-ai/sdk": "^0.32.1",
-    "@headlessui/react": "^2.1.8",
-    "@heroicons/react": "^2.1.5",
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-collapsible": "^1.1.8",
+    "@radix-ui/react-context-menu": "^2.2.12",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-hover-card": "^1.1.11",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-menubar": "^1.1.12",
+    "@radix-ui/react-navigation-menu": "^1.2.10",
+    "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slider": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-toggle-group": "^1.1.7",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@shadcn/ui": "^0.0.4",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.5.2",
-    "@tiptap/pm": "^2.6.6",
-    "@tiptap/react": "^2.6.6",
-    "@tiptap/starter-kit": "^2.6.6",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@types/file-saver": "^2.0.7",
     "@types/uuid": "^10.0.0",
-    "@uiw/react-md-editor": "^4.0.4",
+    "@uiw/react-md-editor": "^4.0.5",
     "ai": "latest",
     "anthropic": "^0.0.0",
     "caniuse-lite": "^1.0.30001715",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "diff-match-patch": "^1.0.5",
-    "embla-carousel-react": "^8.5.1",
+    "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
-    "gpt-tokenizer": "^2.6.2",
+    "gpt-tokenizer": "^2.9.0",
     "html2canvas": "^1.4.1",
-    "input-otp": "^1.4.1",
+    "input-otp": "^1.4.2",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "next": "14.2.6",
-    "next-themes": "^0.4.4",
-    "openai": "^4.0.0",
+    "next-themes": "^0.4.6",
+    "openai": "^4.96.0",
     "pdf-lib": "^1.17.1",
-    "react": "^18",
-    "react-confetti": "^6.1.0",
+    "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.2",
-    "react-hot-toast": "^2.4.1",
-    "react-markdown": "^9.0.1",
-    "react-resizable-panels": "^2.1.7",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-tweet": "^3.2.1",
-    "recharts": "^2.13.3",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.5",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
+    "react-markdown": "^9.1.0",
+    "react-resizable-panels": "^2.1.8",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-tweet": "^3.2.2",
+    "recharts": "^2.15.3",
+    "sonner": "^1.7.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
-    "vaul": "^1.1.1",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@testing-library/jest-dom": "^6.1.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/diff-match-patch": "^1.0.36",
-    "@types/jest": "^29.5.6",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^20.17.14",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^20.17.30",
     "@types/node-fetch": "2.6.7",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "autoprefixer": "^10.4.21",
     "cursor-tools": "latest",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "2.6.7",
-    "postcss": "^8.4.41",
-    "supabase": "^2.6.8",
-    "tailwindcss": "^3.4.10",
-    "ts-jest": "^29.1.1",
+    "postcss": "^8.5.3",
+    "supabase": "^2.22.4",
+    "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   },
   "resolutions": {
     "node-fetch": "2.6.7"
