--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.4",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
@@ -76,6 +77,7 @@
     "next-themes": "^0.4.6",
     "openai": "^4.96.0",
     "pdf-lib": "^1.17.1",
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
@@ -120,6 +122,6 @@
     "typescript": "^5.8.3"
   },
   "resolutions": {
-    "node-fetch": "2.6.7"
+    "whatwg-url": "^13"
   }
 }
